--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -1,5 +1,5 @@
 *:before, *:after {
-    font-size: 3rem;
+    font-size: 4rem;
     font-weight: 700;
     text-transform: uppercase;
 }
@@ -30,12 +30,14 @@ form {
 
 h1 {
     font-family: 'Goldman', cursive;
-    font-size: 4.9rem;
+    font-size: 6rem;
     color: rgb(39,39,39);
 }
 
 h2 {
+    font-family: 'Goldman', cursive;
     font-size: 4rem;
+    color: whitesmoke;
 }
 
 h3, input {
